--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="../pages/galeria.html">Galeria</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
+          <a id="nav-link-active" class="nav-link" href="../pages/contacto.html">Contacto</a>
         </li>
       </ul>
     </nav>          
