--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav>
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            <a id="nav-link-active" id="nav-link" class="nav-link" aria-current="page" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pages/historia.html">Historia</a>
