--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" href="../pages/razas.html">Razas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="../pages/galeria.html">Galeria</a>
+                  <a id="nav-link-active" class="nav-link" href="../pages/galeria.html">Galeria</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../pages/contacto.html">Contacto</a>
