--- a/pages/historia.html
+++ b/pages/historia.html
@@ -25,7 +25,7 @@
                   <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="../pages/historia.html">Historia</a>
+                  <a id="nav-link-active" class="nav-link" href="../pages/historia.html">Historia</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../pages/razas.html">Razas</a>
