--- a/pages/razas.html
+++ b/pages/razas.html
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="../pages/historia.html">Historia</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="../pages/razas.html">Razas</a>
+                  <a id="nav-link-active" class="nav-link" href="../pages/razas.html">Razas</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../pages/galeria.html">Galeria</a>
