--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -43,7 +43,7 @@
         <div class="grupo"><img src="../public/img/grupo1.jpg"></div>
         <div class="grupo"><img src="../public/img/grupo2.jpg"></div>
         <div class="grupo"><img src="../public/img/grupo3.jpg"></div>
-        <div class="grupo"><img src=""></div>
+        <div class="grupo"><img src="../public/img/carrusel_2.jpg"></div>
         <div class="grupo"><img src="../public/img/grupo5.jpg"></div>
         <div class="grupo"><img src="../public/img/grupo6.jpg"></div>
         <div class="grupo"><img src="../public/img/grupo7.jpg"></div>
